[project]
name = "alexnet-torch"
version = "0.1.0"
description = ""
authors = [
    {name = "jordan.m.young0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch (>=2.5.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
